--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -63,8 +63,7 @@
 
     </div>
     <div class="col-md-3 right-btn-col">
-      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn all-btn my-reserve add-top" ng-if="!item.Is_in_catelog">Add to Cart</a>
-      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn all-btn my-reserve is-added add-top" ng-if="item.Is_in_catelog">Add to Cart</a>
+      <button ui-sref="hm.reserveEquipment({id :item.Product_Id})" type="button" class="btn all-btn my-reserve sell-equ" ng-disabled="item.alreadyExistsInCart" ng-class="{'add=top': !item.Is_in_catelog, 'is-added add-top': item.Is_in_catelog }">Add{{item.alreadyExistsInCart ? 'ed' : ''}} to Cart</button>
       <button type="button" class="btn add-list all-btn sell-equ add-top" ng-click="addToOrRemoveFromWishList(item)">
         <span btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id">{{item.Is_in_catelog ? 'Added to Catelog': 'Add to Catelog'}}</span>
       </button>
