review cart page header search bar and cart count on prelogin transition text z-index

--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -40,7 +40,7 @@
                   <span>Duration</span>
                 </a>
               </li>
-              <li class="pending on-hover-pointer">
+              <li class="pending on-hover-pointer" ui-sref="hm.cart.review">
                 <a href="" class="color-blue bold-font desc-text progress-a">
                   <span class="bubble">
                   </span>
