--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -83,7 +83,7 @@
                  typeahead-on-select="selectSearchedItem($item, $model, $label)"
                  typeahead-template-url="typeahead-item.html">
 
-          <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
+          <button class="btn btn-default my_search my-search-header" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
           <div class="dont-see-div">
             <a href="/#/help" class="help-link">Don't see what you need?</a>
             <div class="btn-group drop-btn profile-dropdown user-div visible-xs visible-sm" dropdown>
