--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -45,9 +45,9 @@
         <span class="marker">{{cartData.selectedJobSite.Phone}}</span>
         <br>
         <i class="fa fa-user marker"></i>
-  				<span class="marker">
-  					Name of Contact Person
-  				</span>
+  			<span class="marker">
+  				Name of Contact Person
+  			</span>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading lr-padding lr-padding-small">
         <h3 class="heading-text">Contact Information</h3>
@@ -139,7 +139,7 @@
   <!-- cart summary part -->
   <div ui-view="snapshot"></div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding devider devider-bottom"></div>
-  <div class="row">
+  <div class="row nomargin">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn ">
       <button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
         Continue Renting
