--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -15,13 +15,13 @@
           <div class="nav navbar-nav landing-header prelogin-header">
             <div>
               <form class="topnav-search header-form-small" role="search">
-                <input type="text" class="form-control search-head"  name="q" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedProduct"
+                <input type="text" class="form-control search-head search-on-header"  name="q" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedProduct"
                        typeahead="item as item.Product_Name for item in getProducts($viewValue)"
                        typeahead-on-select="selectSearchedItem($item, $model, $label)"
                        autocomplete="off"
                        typeahead-template-url="typeahead-item.html">
 
-                <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
+                <button class="btn btn-default my_search my-search-header" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
 
                 <a href="/#/help" class="help-link see-your-need-small">Don't see what you need?</a>
                 
