--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -128,7 +128,7 @@ a:focus { color: #0099cc;
 .lift_part:hover{color: #0099cc;}
 .lift_part:first-child{padding: 0 10px 0 0;}
 .lift_part:last-child{padding: 0 0 0 10px;}
-.search-head{width: 56% !important; height: 54px; font-size: 15px !important;}
+.search-head{width: 56% !important; height: 54px;}
 .search-head:focus {
     -webkit-box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.61);
     -moz-box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.61);
@@ -1041,8 +1041,8 @@ a:focus { color: #0099cc;
 }
 
 .not-user-div .cart_noti {
-	top: 10px;
-	right: 75px;
+	vertical-align: inherit;
+  margin-left: -18px;
 }
 
 .user-div {
@@ -2334,6 +2334,10 @@ button:hover {
 	color: #009ddc !important;
 }
 
+.bg-color-gray {
+	background-color: #fafafa !important;
+}
+
 /*delivery*/
 .cart-summary-col {
 	background-color: #fafafa;
@@ -2551,4 +2555,59 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
+
+/*review page*/
+.review-qty {
+	padding-left: 30px !important;
+}
+
+.jobsite-details-col h3 {
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.jobsite-details-col .address2 {
+	margin: 0 12px 5px;
+}
+
+.jobsite-details-col .zip {
+	margin: 0 12px 10px;
+}
+
+.jobsite-details-col .number {
+	margin-right: 30px;
+}
+
+.request-date-col p {
+	margin-bottom: 5px;
+}
+
+.request-date-col p:last-child {
+	margin-bottom: 0;
+}
+
+.review-btn-row {
+	padding-bottom: 15px;
+}
+
+.approx-text {
+	margin-bottom: 15px;
+}
+
+.review-jobsite-details {
+	border-right: 1px solid #ddd;
+}
+
+.my-search-header {
+	padding: 10px 12px;
+}
+
+.search-on-header {
+	height: 40px;
+}
+
+
+
+
+
 
