--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -240,6 +240,7 @@
 
   .landing-collapse-small {
     box-shadow: 0px 3px 2px 0px rgba(0,0,0,0.5);
+    z-index: 100;
   }
 
   .dashboard-text-small {
@@ -825,8 +826,8 @@
   }
 
   .not-user-div .cart_noti {
-    right: 10px;
-    top: 4px;
+    vertical-align: inherit;
+    margin-left: -18px;
   }
   .quotes-site-price {
     margin-top: 15px;
@@ -860,6 +861,11 @@
     margin-top: 20px;
     margin-bottom: 40px;
   }
+  .jobsite-details-col .person-details {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
 }
 
 @media screen and (max-width: 480px) {
@@ -1023,8 +1029,8 @@
     width: 92%;
   }
   .not-user-div .cart_noti {
-    right: -8px;
-    top: 10px;
+    vertical-align: inherit;
+    margin-left: -18px;
   }
   .quotes-total-price {
     background-color: transparent;
