non-stable changes in landing page

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -322,18 +322,19 @@
       </div><!-- /.container-fluid -->
     </nav>
       <!-- START  Header Title -->
-      <h1 class="rent_tit">Rent and Buy Construction Equipments in Seconds</h1>
+        <!-- transition line -->
+        <h3 class="sentence">Rent And Buy Construction
+            <div class="slidingVertical">
+                <span>Equipments</span>
+                <span>Parts</span>
+                <span>Accesories</span>
+                <span>Attachments</span>
+            </div>
+        </h3>
+        <!--<h1 class="rent_tit">Rent and Buy Construction Equipments in Seconds</h1>-->
       <!-- End  Header Title -->
 
-      <!-- transition line -->
-      <h3 class="sentence">Rent And Buy Construction
-        <div class="slidingVertical">
-          <span>Equipments</span>
-          <span>Parts</span>
-          <span>Accesories</span>
-          <span>Attachments</span>
-        </div>
-      </h3>
+
 
       <!-- START  RENT/BUY BUTTON -->
       <div class="rent_bt_main">
