--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2488,8 +2488,8 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 }
 
 .sentence{
-  margin-bottom: 40px;
-  margin-top: 40px;
+  /*margin-bottom: 40px;*/
+    margin-top: 125px;
 	color: #ddd;
 	font-size: 50px;
 	font-weight: 300;
