--- a/src/app/cart/cart-duration.html
+++ b/src/app/cart/cart-duration.html
@@ -5,7 +5,7 @@
     </div>
     <!-- Enter Duration Period -->
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time lr-padding">
-      <p class="desc-text">Pickup Details</p>
+      <p class="desc-text">Start Renting From</p>
       <div class="form-control search-div select-date">
         <input type="text" placeholder="dd/mm/yyyy">
         <i class="fa fa-calendar pull-right"></i>
@@ -69,19 +69,21 @@
     </div>
   </div>
 
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding visible-sm visible-xs devider-bottom devider"></div>
+  
 
   <!-- cart summary part -->
   <div ui-view="snapshot"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
-  <div class="row nomargin">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn ">
-      <button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
-        Continue Renting
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider devider-bottom"></div>
+  <div class="row nomargin review-btn-row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
+      <button class="btn all-btn sell-equ btn-right-margin" ui-sref="hm.cart.updateAddress">
+        <i class="fa fa-angle-left"></i>&nbsp
+        Back
       </button>
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
-      <button class="btn sign_mybtn all-btn primary-btn reser-now cont" ui-sref="hm.cart.review">Next</button>
+      <button class="btn all-btn sign_mybtn primary-btn" ui-sref="hm.cart.review">
+        Next
+        &nbsp<i class="fa fa-angle-right"></i>
+      </button>
     </div>
   </div>
 </div>
