--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -262,7 +262,13 @@
 </div>
 <div class="row review-btn-row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
-		<button class="btn all-btn sell-equ">Back</button>
-		<button class="btn all-btn sign_mybtn primary-btn" ui-sref="hm.cart.payment">Next</button>
+		<button class="btn all-btn sell-equ btn-right-margin" ui-sref="hm.cart.cartDuration">
+			<i class="fa fa-angle-left"></i>&nbsp
+			Back
+		</button>
+		<button class="btn all-btn sign_mybtn primary-btn" ui-sref="hm.cart.payment">
+			Next
+			&nbsp<i class="fa fa-angle-right"></i>
+		</button>
 	</div>
 </div>
