--- a/src/app/cart/cart-snapshot.html
+++ b/src/app/cart/cart-snapshot.html
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 cart-summary-col hidden-xs">
+<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 cart-summary-col hidden-sm hidden-xs">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line shopping-cart-heading nopadding bold-font"><i class="fa fa-shopping-cart"></i>&nbsp
     Cart Summary
   </div>
@@ -7,7 +7,8 @@
       <li ng-repeat="product in cart.Product">
         <i class="fa fa-truck fa-2x pull-left"></i>
         <p class="bold-font go-back-text equipment-name color-blue">{{product.Product_name}}</p>
-        <input type="checkbox" class="allow-checkbox" ng-model="cartData.productsQuantity[product.Product_id].allowSubstitution" onclick="return false;"><span class="desc-text allow">Allow Substitution</span>
+        <!-- <input type="checkbox" class="allow-checkbox" ng-model="cartData.productsQuantity[product.Product_id].allowSubstitution" onclick="return false;"><span class="desc-text allow">Allow Substitution</span> -->
+        <span class="desc-text allow">No Substitution Permitted</span>
         <span class="desc-text pull-right qty-summary">Qty: {{cartData.productsQuantity[product.Product_id].qty}}</span>
         <p class="desc-text bold-font total">
           ${{product.Product_rate}}
