--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -48,6 +48,14 @@
                   <span>Review Order</span>
                 </a>
               </li>
+              <li class="pending on-hover-pointer" ui-sref="hm.cart.payment">
+                <a href="" class="color-blue bold-font desc-text progress-a">
+                  <span class="bubble">
+                  </span>
+                  <!-- <i class="fa fa-check-circle"></i>&nbsp -->
+                  <span>Payment</span>
+                </a>
+              </li>
             </ul>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom"></div>
