landing page and catalog spelling changes

--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -85,7 +85,7 @@
           <!--                        <div class="req_dash_botam col-lg-12 ten_botam"></div>-->
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center ten_top_botam add-wish-btn">
             <button class="btn now-reserve col-lg-12 all-btn sell-equ" type="button" ng-click="addToOrRemoveFromWishList(equipment)">
-              <span btn-load-indicator="Add:Wishlist:Process" btn-uid="equipment.Product_Id">{{equipment.Is_in_catelog ? 'Added to Catelog': 'Add to Catelog'}}</span>
+              <span btn-load-indicator="Add:Wishlist:Process" btn-uid="equipment.Product_Id">{{equipment.Is_in_catelog ? 'Add to Catalog': 'Added to Catalog'}}</span>
             </button>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center ten_top_botam">
