Born of awesomeness in Landing page

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -438,36 +438,40 @@
       <h2 class="mob_subtit">Easily manage your fleet from anywhere on your device</h2>
       <!-- End  Mobile Title/Sub -->
       <div class="row">
-        <div class="col-lg-1 col-md-1"></div>
+
         <!-- START  Mobile device image -->
         <div class="col-lg-6 col-md-6 col-sm-6">
           <img class="img-responsive" src="assets/images/mobile-bg.png" alt="">
         </div>
         <!-- End  Mobile device image -->
         <!-- START  technology description -->
-        <div class="col-lg-5 col-md-5 col-sm-6">
+        <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="tech-menu">
             <ul>
               <li>
-                <h2>Technology Title Here</h2>
-                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
-                  dui laoreet vulputate dignissim. Sed id metus .
+                <h2>Browse Rental Equipment</h2>
+                <p>Lookup for more than 2000 equipments, parts, accessories and attachments to rent in more than 50 categories.
                 </p>
               </li>
 
               <li>
-                <h2>Technology Title Here</h2>
-                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
-                  odio, ut volutpat massa placerat ac. Curabitur .
+                <h2>Buy Used Equipment</h2>
+                <p>Why to Buy new when you can buy old one for smaller tasks? Check for used equipments before you buy new one.
                 </p>
               </li>
               <li>
-                <h2>Technology Title Here</h2>
-                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
-                  felis odio, ut volutpat massa placerat ac. Curabitur
-                  dapibus iaculis.
+                <h2>Apply For Financing</h2>
+                <p>Best in class support for easy finance options. Get help from our executives to finance your equipments now.
                 </p>
               </li>
+                <li>
+                    <h2>Supercharge Your Business</h2>
+                    <p>
+                        Noble Iron Online is powered by Texada Software’s cloud platform. Texada builds software for equipment rental companies, equipment dealerships, construction companies, contractors, and any construction or industrial equipment user, including mechanics, logistics and service technicians. Texada Software manages the entire equipment lifecycle, including equipment purchasing; rental & sales transactions; inventory location, utilization, maintenance and depreciation tracking; used equipment sales analysis; and inventory replenishment.
+                    </p>
+                    <button class="btn btn-default check_rate no-margin" type="button">Get the Software Now <i class="fa fa-angle-double-right"></i></button>
+                    
+                </li>
             </ul>
           </div>
         </div>
