--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -15,9 +15,6 @@
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding nopadding-small credit-card-col">
-      <div class="col-xs-12 visible-xs nopadding-xs pull-center">
-        <div id="card-container"></div>
-      </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 leftpadding nopadding-small">
         <form action="#"
               name="cardForm"
@@ -42,7 +39,7 @@
           </div>
         </form>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 hidden-xs">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div id="card-container"></div>
       </div>
     </div>
