--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -322,13 +322,13 @@
     text-align: center;
   }
   .credit-card-col .jp-card-container {
-    max-width: 300px;
+    max-width: 315px;
     display: inline-block;
     text-align: left;
   }
 
   .card-detail-form {
-    margin-top: 15px;
+    margin-bottom: 15px;
   }
 
 }
