landing ui fixes and cart btn ui fixes

--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -145,7 +145,7 @@
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
       <a ui-sref="hm.cart.updateAddress" class="btn sign_mybtn all-btn primary-btn">
         Next
-        &nbsp<i class="fa fa-angle-right"></i>
+        &nbsp<i class="fa fa fa-chevron-right"></i>
       </a>
       <!-- <button class="btn sign_mybtn all-btn primary-btn">Reserve Now</button> -->
     </div>
