--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -263,12 +263,12 @@
 <div class="row review-btn-row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
 		<button class="btn all-btn sell-equ btn-right-margin" ui-sref="hm.cart.cartDuration">
-			<i class="fa fa-angle-left"></i>&nbsp
+			<i class="fa fa fa-chevron-left"></i>&nbsp 
 			Back
 		</button>
-		<button class="btn all-btn sign_mybtn primary-btn" ui-sref="hm.cart.payment">
+		<button class="btn all-btn sign_mybtn primary-btn autowidth" ui-sref="hm.cart.payment">
 			Next
-			&nbsp<i class="fa fa-angle-right"></i>
+			&nbsp<i class="fa fa fa-chevron-right"></i>
 		</button>
 	</div>
 </div>
