--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -21,7 +21,7 @@
                       <span class="bubble">
                       </span>
                   <i class="fa fa-check-circle color-blue"></i>&nbsp
-                  <span>Cart Summary</span>
+                  <span class="progress-span">Cart Summary</span>
                 </a>
               </li>
               <li class="pending on-hover-pointer" ui-sref="hm.cart.updateAddress">
@@ -29,7 +29,7 @@
                       <span class="bubble">
                       </span>
                   <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span>Delivery Details</span>
+                  <span class="progress-span">Delivery Details</span>
                 </a>
               </li>
               <li class="pending on-hover-pointer" ui-sref="hm.cart.cartDuration">
@@ -37,7 +37,7 @@
                   <span class="bubble">
                   </span>
                   <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span>Duration</span>
+                  <span class="progress-span">Duration</span>
                 </a>
               </li>
               <li class="pending on-hover-pointer" ui-sref="hm.cart.review">
@@ -45,7 +45,7 @@
                   <span class="bubble">
                   </span>
                   <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span>Review Order</span>
+                  <span class="progress-span">Review Order</span>
                 </a>
               </li>
               <li class="pending on-hover-pointer" ui-sref="hm.cart.payment">
@@ -53,7 +53,7 @@
                   <span class="bubble">
                   </span>
                   <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span>Payment</span>
+                  <span class="progress-span">Payment</span>
                 </a>
               </li>
             </ul>
