--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -3,7 +3,7 @@
     <nav class="navbar">
       <div class="container nopadding">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header landing-navbar-header">
+        <div class="navbar-header landing-navbar-header nomargin">
           <button type="button" class="navbar-toggle collapsed landing-header topmargin" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -345,7 +345,7 @@
       <!-- END  RENT/BUY BUTTON -->
       <!-- START  Search box -->
       <div class="search_main">
-        <form class="navbar-form" role="search">
+        <form class="navbar-form nomargin" role="search">
 
           <input type="text" class="form-control search-head" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="query" name="query" ng-model="selectedProduct"
                  typeahead="item as item.Product_Name for item in getProducts($viewValue)"
@@ -469,7 +469,7 @@
                     <p>
                         Noble Iron Online is powered by Texada Software’s cloud platform. Texada builds software for equipment rental companies, equipment dealerships, construction companies, contractors, and any construction or industrial equipment user, including mechanics, logistics and service technicians. Texada Software manages the entire equipment lifecycle, including equipment purchasing; rental & sales transactions; inventory location, utilization, maintenance and depreciation tracking; used equipment sales analysis; and inventory replenishment.
                     </p>
-                    <button class="btn btn-default check_rate no-margin" type="button">Get the Software Now <i class="fa fa-angle-double-right"></i></button>
+                    <button class="btn check_rate no-margin bg-color-blue primary-btn white-color" type="button">Get the Software Now <i class="fa fa-angle-double-right"></i></button>
                     
                 </li>
             </ul>
